// Vitest Snapshot v1

exports[`WalletListItemSkeleton > should render wallet list skeleton when isCompact = false 1`] = `
<div>
  <table>
    <tbody
      data-testid="WalletListSkeleton"
    >
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="items-center space-x-4 css-5lky4z"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 18px; height: 18px;"
              >
                ‌
              </span>
              <br />
            </span>
            <div
              class="flex items-center border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-4 space-x-4 pl-4"
            >
              <div
                class="border-transparent ring-theme-background duration-100 css-14jhlj1"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 44px; height: 44px; border-radius: 50%;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 200px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-center css-1d4ra48"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 100px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end css-1d4ra48"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 150px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end css-1d4ra48"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 100px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end text-theme-secondary-text css-vs626"
          >
            <button
              class="ml-3 my-auto css-1yqe28v"
              data-testid="WalletHeader__send-button"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Send
              </div>
            </button>
            <div
              class="ml-3"
              data-testid="WalletHeader__more-button"
            >
              <button
                class="w-11 flex-1 bg-theme-primary-600 text-white hover:bg-theme-primary-700 css-1yqe28v"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="ellipsis-vertical"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="16.994"
                          r="2.006"
                        />
                        <circle
                          cx="10"
                          cy="3"
                          r="2"
                        />
                        <circle
                          cx="10"
                          cy="10"
                          r="2"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItemSkeleton > should render wallet list skeleton when isCompact = true 1`] = `
<div>
  <table>
    <tbody
      data-testid="WalletListSkeleton"
    >
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td>
          <div
            class="items-center space-x-3 css-7ewq14"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 18px; height: 18px;"
              >
                ‌
              </span>
              <br />
            </span>
            <div
              class="flex items-center border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-3 space-x-3 pl-3"
            >
              <div
                class="border-transparent ring-theme-background duration-100 css-1jea4xx"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 20px; height: 20px; border-radius: 50%;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 200px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-center css-1rods8x"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 100px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end css-1rods8x"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 150px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end css-1rods8x"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 100px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end text-theme-secondary-text css-16k0yyn"
          >
            <button
              class="ml-3 -mr-3 text-theme-primary-600 hover:text-theme-primary-700 css-127bt7l"
              data-testid="WalletHeader__send-button"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Send
              </div>
            </button>
            <div
              class="ml-3"
              data-testid="WalletHeader__more-button"
            >
              <button
                class="w-11 -mr-1.5 text-theme-primary-300 hover:text-theme-primary-600 css-127bt7l"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg
                      id="ellipsis-vertical"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="16.994"
                          r="2.006"
                        />
                        <circle
                          cx="10"
                          cy="3"
                          r="2"
                        />
                        <circle
                          cx="10"
                          cy="10"
                          r="2"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
